# Version-Tool

./: .gitignore  CMakeLists.txt  LICENSE
sample_data/tc1/v1/: exact_file.txt  file.txt
sample_data/tc1/v2/: file.txt  some_crazy_file.txt
src/: args_parser.cpp  args_parser.h  commands.h  env.hpp  file_utils.cpp  file_utils.h  main_vct.cpp  progress_bar.cpp  progress_bar.h  sandbox.cpp  structures.h
